--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,7 +3,7 @@
     <div class="todo w-50 h-auto">
          <h1>To-Do List <img src="./Images/icon.png" alt="icon" class="img"></h1>
         <div class="search">
-            <form action="/submit" method="POST"  class="d-flex">
+            <form action="/" method="POST"  class="d-flex">
                 <input type="text" class="form-control me-1" name="Task" id="input-box"  placeholder="Enter Your Task">
                 <input type="submit" id="send"  value="Add">
             </form>
